# ocalc

./: dune-project  ocalc.opam
lib/: dune  expr.ml  lexer.ml  parser.ml
test/: dune  test_ocalc.ml
