(lang dune 3.20)

(name ocalc)

(generate_opam_files true)

(source
 (github lkurcak/ocalc))

(authors "Ľubomír Kurčák <lubomirkurcak@gmail.com>")

(maintainers "Ľubomír Kurčák <lubomirkurcak@gmail.com>")

(license UNLICENSE)

(documentation https://github.com/lkurcak/ocalc)

(package
 (name ocalc)
 (synopsis "Simple calculator implemented in OCaml")
 (description "Simple calculator implemented in OCaml")
 (depends ocaml)
 (tags
  ("calculator" "checking out ocaml")))
